Fix column wrapping and text overflow on category listing

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -121,8 +121,12 @@ footer.footer
   .categories
     @extend .columns, .is-multiline
     padding: 0.75rem 0
+    .category
+      @extend .column, .is-full, .is-half-desktop, .control
   a.button
     @extend .is-light, .is-fullwidth, .is-inline-block, .has-text-left
+    overflow: hidden
+    text-overflow: ellipsis
 
 .project
   header
